# SHARP256

./: .gitignore  Cargo.toml  LICENSE  README.md  Rec after commit 12.txt  Recommendation for RFC ver.txt  TURN документация.txt  commands.txt  compass_artifact_wf-125af74a-f077-4290-9d40-c7194e880a24_text_markdown.md
examples/: nat_system_usage.rs
previous rec's/: Анализ Rust кода для NAT traversal.txt
src/: fragmentation.rs  lib.rs  progress.rs
src/buffer/: mod.rs
src/file/: mod.rs
src/fragmentation/: detector.rs  mod.rs
src/gui/: mod.rs  receiver_gui.rs  sender_gui.rs
src/nat/: coordinator.rs  error.rs  hole_punch.rs  ice_integration.rs  metrics.rs  mod.rs  stun.rs  stun_turn_manager.rs  upnp.rs
src/nat/ice/: agent.rs  candidate.rs  check_list.rs  connectivity.rs  foundation.rs  gathering.rs  keepalive.rs  mod.rs  nomination.rs  priority.rs  states.rs  stream.rs  trickle.rs  utils.rs
src/nat/port_forwarding/: mod.rs
src/nat/stun/: auth.rs  client.rs  discovery.rs  mod.rs  monitoring.rs  protocol.rs  utils.rs
src/nat/turn/: allocation_manager.rs  auth_security.rs  mod.rs  permission_channel_manager.rs  rate_limiter.rs  server.rs
src/protocol/: ack.rs  constants.rs  mod.rs  packet.rs
src/protocol/file_exchange/: mod.rs
src/receiver/: mod.rs
src/sao/: mod.rs
src/security/: crypto.rs
src/sender/: mod.rs
src/state/: mod.rs
tests/: integration_tests.rs
